fixed overflow on case cards

--- a/css/main.css
+++ b/css/main.css
@@ -397,13 +397,16 @@ a:link, a:visited, a:active {
 
 
 .caseCard {
+    flex: 1;
     display: flex;
     flex-direction: column;
+    overflow: hidden;
+
     justify-content: center;
     align-items: center;
 
-    width: 360px;
-    
+    max-width: 360px;
+    height: auto;
     
 
     background: #2C2C2C;
@@ -411,10 +414,9 @@ a:link, a:visited, a:active {
 }
 
 .imageDiv {
+    
     display: flex;
-    flex-direction: row;
-    max-width: 360px;
-    height: 260px;
+    height: 200px;
     overflow: hidden;
     object-fit: cover;
     align-items: center;
@@ -423,9 +425,9 @@ a:link, a:visited, a:active {
 }
 
 .imageDiv img {
-    
-    width:110%;
-    height: 110%;
+    margin: 0;
+    width:100%;
+    height: auto;
     
 
 }
@@ -434,13 +436,14 @@ a:link, a:visited, a:active {
 
 .case-content {
     display: flex;
+    flex: 1;
     flex-direction: column;
     align-items: flex-start;
     padding: 0px;
     gap: 4px;
     margin: 32px;
     
-    height: 200px;
+    min-height: 200px;
 }
 
 
